add hero_page and portfolio structure

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="debug">
 
 <header>
-    <div class="container">
+    <div class="container-lg">
         <nav class="d-flex">
             <div class="site_name">START BOOTSTRAP</div>
             <div class="menu"></div>
@@ -21,7 +21,71 @@
     </div>
 </header>
 
-<main></main>
+<main>
+    <section class="hero_page">
+        <div class="container-lg">
+            <div class="row">
+                <div class="col-12"></div>
+                <!-- /.col-12 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.hero_page -->
+
+    <section class="portfolio">
+
+        <div class="container-lg">
+
+            <div class="row">
+
+                <div class="col-12">
+                    <h2>PORTFOLIO</h2>
+                </div>
+                <!-- /.col-12 -->
+
+                <div class="col-12 col-lg-6 col-xxl-4">
+                    <img src="" alt="">
+                </div>
+                <!-- /.col-12 -->
+
+                <div class="col-12 col-lg-6 col-xxl-4">
+                    <img src="" alt="">
+                </div>
+                <!-- /.col-12 -->
+
+                <div class="col-12 col-lg-6 col-xxl-4">
+                    <img src="" alt="">
+                </div>
+                <!-- /.col-12 -->
+
+                <div class="col-12 col-lg-6 col-xxl-4">
+                    <img src="" alt="">
+                </div>
+                <!-- /.col-12 -->
+
+                <div class="col-12 col-lg-6 col-xxl-4">
+                    <img src="" alt="">
+                </div>
+                <!-- /.col-12 -->
+
+                <div class="col-12 col-lg-6 col-xxl-4">
+                    <img src="" alt="">
+                </div>
+                <!-- /.col-12 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.portfolio -->
+
+    <section class="about"></section>
+    <!-- /.about -->
+    <section class="contact"></section>
+    <!-- /.contact -->
+</main>
 <footer></footer>    
 </body>
 
