--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container-lg">
             <div class="row">
                 <div class="col-12"></div>
-                <!-- /.col-12 -->
+                <!-- /.col -->
             </div>
             <!-- /.row -->
         </div>
@@ -43,37 +43,37 @@
                 <div class="col-12">
                     <h2>PORTFOLIO</h2>
                 </div>
-                <!-- /.col-12 -->
+                <!-- /.col -->
 
                 <div class="col-12 col-lg-6 col-xxl-4">
                     <img src="" alt="">
                 </div>
-                <!-- /.col-12 -->
+                <!-- /.col -->
 
                 <div class="col-12 col-lg-6 col-xxl-4">
                     <img src="" alt="">
                 </div>
-                <!-- /.col-12 -->
+                <!-- /.col -->
 
                 <div class="col-12 col-lg-6 col-xxl-4">
                     <img src="" alt="">
                 </div>
-                <!-- /.col-12 -->
+                <!-- /.col -->
 
                 <div class="col-12 col-lg-6 col-xxl-4">
                     <img src="" alt="">
                 </div>
-                <!-- /.col-12 -->
+                <!-- /.col -->
 
                 <div class="col-12 col-lg-6 col-xxl-4">
                     <img src="" alt="">
                 </div>
-                <!-- /.col-12 -->
+                <!-- /.col -->
 
                 <div class="col-12 col-lg-6 col-xxl-4">
                     <img src="" alt="">
                 </div>
-                <!-- /.col-12 -->
+                <!-- /.col -->
             </div>
             <!-- /.row -->
         </div>
@@ -81,11 +81,66 @@
     </section>
     <!-- /.portfolio -->
 
-    <section class="about"></section>
+    <section class="about">
+
+        <div class="container-lg">
+
+            <div class="row">
+
+                <div class="col-12">
+                    <h2>ABOUT</h2>
+                </div>
+                <!-- /.col -->
+
+                <div class="col-12 col-lg-6">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit sint obcaecati pariatur aliquid commodi a officiis reprehenderit blanditiis. Praesentium voluptas corporis voluptatibus hic aspernatur dolores dicta veniam odio magni quo!
+                    </p>
+                </div>
+                <!-- /.col -->
+
+                <div class="col-12 col-lg-6">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis perspiciatis, ratione iusto aliquam non libero dolorum, magni eius recusandae temporibus officiis tempora quis modi reiciendis assumenda rerum voluptatem dolor. Nisi?
+                    </p>
+                </div>
+                <!-- /.col -->
+
+                <div class="col-12">
+                    <div>
+                        Download
+                    </div>
+                </div>
+                <!-- /.col -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
     <!-- /.about -->
-    <section class="contact"></section>
+
+    <section class="contact">
+
+        <div class="container-lg">
+
+            <div class="row">
+
+                <div class="col-12">
+
+                    <h2>CONTACT ME</h2>
+
+                    <form action=""></form>
+
+                </div>
+                <!-- /.col-12 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container-lg -->
+    </section>
     <!-- /.contact -->
 </main>
+
 <footer></footer>    
 </body>
 
