add footer structure

--- a/index.html
+++ b/index.html
@@ -136,12 +136,40 @@
             </div>
             <!-- /.row -->
         </div>
-        <!-- /.container-lg -->
+        <!-- /.container -->
     </section>
     <!-- /.contact -->
 </main>
 
-<footer></footer>    
+<footer>
+    <section class="top">
+
+        <div class="container-lg">
+
+            <div class="row">
+
+                <div class="col-12 col-lg-4"></div>
+                <!-- /.col -->
+
+                <div class="col-12 col-lg-4"></div>
+                <!-- /.col -->
+
+                <div class="col-12 col-lg-4"></div>
+                <!-- /.col -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.top -->
+    
+    <div class="bottom">
+        <div class="col-12">
+            Copyright &copy; Your Website 2019
+        </div>
+    </div>
+    <!-- /.bottom -->
+</footer>    
 </body>
 
 </html>
