edit hero_page and portfolio structure

--- a/index.html
+++ b/index.html
@@ -23,9 +23,18 @@
 
 <main>
     <section class="hero_page">
+
         <div class="container-lg">
+
             <div class="row">
-                <div class="col-12"></div>
+
+                <div class="col-12">
+                    
+                    <img src="" alt="">
+                    <h1>START BOOTSTRAP</h1>
+                    <div class="divider">&starf;</div>
+                    <div>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</div>
+                </div>
                 <!-- /.col -->
             </div>
             <!-- /.row -->
@@ -162,7 +171,7 @@
         <!-- /.container -->
     </section>
     <!-- /.top -->
-    
+
     <div class="bottom">
         <div class="col-12">
             Copyright &copy; Your Website 2019
