edit hero_page content

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
             <div class="row">
 
-                <div class="col-12">
-                    
-                    <img src="" alt="">
-                    <h1>START BOOTSTRAP</h1>
-                    <div class="divider">&starf;</div>
-                    <div>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</div>
+                <div class="col-12 text-center p-4">
+
+                    <img src="./assets/img/avatar.svg" alt="">
+                    <h1 class="pt-4">START BOOTSTRAP</h1>
+                    <div class="divider pb-2">&starf;</div>
+                    <h6>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h6>
                 </div>
                 <!-- /.col -->
             </div>
