--- a/index.html
+++ b/index.html
@@ -12,173 +12,197 @@
 
 <body class="debug">
 
-<header>
-    <div class="container-lg">
-        <nav class="d-flex">
-            <div class="site_name">START BOOTSTRAP</div>
-            <div class="menu"></div>
-        </nav>
-    </div>
-</header>
-
-<main>
-    <section class="hero_page">
-
+    <header>
         <div class="container-lg">
-
-            <div class="row">
-
-                <div class="col-12 text-center p-4">
-
-                    <img src="./assets/img/avatar.svg" alt="">
-                    <h1 class="pt-4">START BOOTSTRAP</h1>
-                    <div class="divider pb-2">&starf;</div>
-                    <h6>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h6>
-                </div>
-                <!-- /.col -->
-            </div>
-            <!-- /.row -->
+            <nav class="d-flex">
+                <div class="site_name">START BOOTSTRAP</div>
+                <div class="menu"></div>
+            </nav>
         </div>
-        <!-- /.container -->
-    </section>
-    <!-- /.hero_page -->
+    </header>
 
-    <section class="portfolio">
+    <main>
+        <section class="hero_page">
 
-        <div class="container-lg">
+            <div class="container">
 
-            <div class="row">
+                <div class="row">
 
-                <div class="col-12">
-                    <h2>PORTFOLIO</h2>
-                </div>
-                <!-- /.col -->
+                    <div class="col-12 text-center p-4">
 
-                <div class="col-12 col-lg-6 col-xxl-4">
-                    <img src="" alt="">
-                </div>
-                <!-- /.col -->
+                        <img src="./assets/img/avatar.svg" alt="">
 
-                <div class="col-12 col-lg-6 col-xxl-4">
-                    <img src="" alt="">
-                </div>
-                <!-- /.col -->
+                        <h1 class="pt-4">START BOOTSTRAP</h1>
 
-                <div class="col-12 col-lg-6 col-xxl-4">
-                    <img src="" alt="">
-                </div>
-                <!-- /.col -->
+                        <div class="divider pb-2 fs-1">&starf;</div>
 
-                <div class="col-12 col-lg-6 col-xxl-4">
-                    <img src="" alt="">
-                </div>
-                <!-- /.col -->
-
-                <div class="col-12 col-lg-6 col-xxl-4">
-                    <img src="" alt="">
-                </div>
-                <!-- /.col -->
-
-                <div class="col-12 col-lg-6 col-xxl-4">
-                    <img src="" alt="">
-                </div>
-                <!-- /.col -->
-            </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-    <!-- /.portfolio -->
-
-    <section class="about">
-
-        <div class="container-lg">
-
-            <div class="row">
-
-                <div class="col-12">
-                    <h2>ABOUT</h2>
-                </div>
-                <!-- /.col -->
-
-                <div class="col-12 col-lg-6">
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit sint obcaecati pariatur aliquid commodi a officiis reprehenderit blanditiis. Praesentium voluptas corporis voluptatibus hic aspernatur dolores dicta veniam odio magni quo!
-                    </p>
-                </div>
-                <!-- /.col -->
-
-                <div class="col-12 col-lg-6">
-                    <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis perspiciatis, ratione iusto aliquam non libero dolorum, magni eius recusandae temporibus officiis tempora quis modi reiciendis assumenda rerum voluptatem dolor. Nisi?
-                    </p>
-                </div>
-                <!-- /.col -->
-
-                <div class="col-12">
-                    <div>
-                        Download
+                        <h6>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h6>
                     </div>
+                    <!-- /.col -->
                 </div>
-                <!-- /.col -->
+                <!-- /.row -->
             </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-    <!-- /.about -->
+            <!-- /.container -->
+        </section>
+        <!-- /.hero_page -->
 
-    <section class="contact">
+        <section class="portfolio">
 
-        <div class="container-lg">
+            <div class="container py-5">
 
-            <div class="row">
+                <div class="row">
 
-                <div class="col-12">
+                    <div class="col-12 text-center">
 
-                    <h2>CONTACT ME</h2>
+                        <h2>PORTFOLIO</h2>
 
-                    <form action=""></form>
+                        <div class="divider pb-2 fs-1">&starf;</div>
 
+                    </div>
+                    <!-- /.col -->
+
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="card my-2">
+                            <img class="img-fluid rounded" src="./assets/img/cabin.png" alt="">
+                        </div>
+                    </div>
+                    <!-- /.col -->
+
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="card my-2">
+                            <img class="img-fluid rounded" src="./assets/img/cake.png" alt="">
+                        </div>
+                    </div>
+                    <!-- /.col -->
+
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="card my-2">
+                            <img class="img-fluid rounded" src="./assets/img/circus.png" alt="">
+                        </div>
+                    </div>
+                    <!-- /.col -->
+
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="card my-2">
+                            <img class="img-fluid rounded" src="./assets/img/game.png" alt="">
+                        </div>
+                    </div>
+
+                    <!-- /.col -->
+
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="card my-2">
+                            <img class="img-fluid rounded" src="./assets/img/safe.png" alt="">
+                        </div>
+                    </div>
+                    <!-- /.col -->
+
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <div class="card my-2">
+                            <img class="img-fluid rounded" src="./assets/img/submarine.png" alt="">
+                        </div>
+                    </div>
+                    <!-- /.col -->
                 </div>
-                <!-- /.col-12 -->
+                <!-- /.row -->
             </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-    <!-- /.contact -->
-</main>
+            <!-- /.container -->
+        </section>
+        <!-- /.portfolio -->
 
-<footer>
-    <section class="top">
+        <section class="about">
 
-        <div class="container-lg">
+            <div class="container">
 
-            <div class="row">
+                <div class="row">
 
-                <div class="col-12 col-lg-4"></div>
-                <!-- /.col -->
+                    <div class="col-12">
+                        <h2>ABOUT</h2>
+                    </div>
+                    <!-- /.col -->
 
-                <div class="col-12 col-lg-4"></div>
-                <!-- /.col -->
+                    <div class="col-12 col-lg-6">
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit sint obcaecati pariatur
+                            aliquid commodi a officiis reprehenderit blanditiis. Praesentium voluptas corporis
+                            voluptatibus hic aspernatur dolores dicta veniam odio magni quo!
+                        </p>
+                    </div>
+                    <!-- /.col -->
 
-                <div class="col-12 col-lg-4"></div>
-                <!-- /.col -->
+                    <div class="col-12 col-lg-6">
+                        <p>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis perspiciatis, ratione
+                            iusto aliquam non libero dolorum, magni eius recusandae temporibus officiis tempora quis
+                            modi reiciendis assumenda rerum voluptatem dolor. Nisi?
+                        </p>
+                    </div>
+                    <!-- /.col -->
+
+                    <div class="col-12">
+                        <div>
+                            Download
+                        </div>
+                    </div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
             </div>
-            <!-- /.row -->
-        </div>
-        <!-- /.container -->
-    </section>
-    <!-- /.top -->
+            <!-- /.container -->
+        </section>
+        <!-- /.about -->
 
-    <div class="bottom">
-        <div class="col-12">
-            Copyright &copy; Your Website 2019
+        <section class="contact">
+
+            <div class="container">
+
+                <div class="row">
+
+                    <div class="col-12">
+
+                        <h2>CONTACT ME</h2>
+
+                        <form action=""></form>
+
+                    </div>
+                    <!-- /.col-12 -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.contact -->
+    </main>
+
+    <footer>
+        <section class="top">
+
+            <div class="container">
+
+                <div class="row">
+
+                    <div class="col-12 col-lg-4"></div>
+                    <!-- /.col -->
+
+                    <div class="col-12 col-lg-4"></div>
+                    <!-- /.col -->
+
+                    <div class="col-12 col-lg-4"></div>
+                    <!-- /.col -->
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.top -->
+
+        <div class="bottom">
+            <div class="col-12">
+                Copyright &copy; Your Website 2019
+            </div>
         </div>
-    </div>
-    <!-- /.bottom -->
-</footer>    
+        <!-- /.bottom -->
+    </footer>
 </body>
 
 </html>
