--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/bd1c1c4b68.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="debug">
@@ -22,19 +23,24 @@
     </header>
 
     <main>
+
         <section class="hero_page">
 
             <div class="container">
 
                 <div class="row">
 
-                    <div class="col-12 text-center p-4">
+                    <div class="col-12 text-center py-4">
 
                         <img src="./assets/img/avatar.svg" alt="">
 
                         <h1 class="pt-4">START BOOTSTRAP</h1>
 
-                        <div class="divider pb-2 fs-1">&starf;</div>
+                        <div class="divider p-2 fs-1">
+                            <i class="fa-solid fa-minus"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-minus"></i>
+                        </div>
 
                         <h6>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h6>
                     </div>
@@ -56,7 +62,11 @@
 
                         <h2>PORTFOLIO</h2>
 
-                        <div class="divider pb-2 fs-1">&starf;</div>
+                        <div class="divider p-2 fs-1">
+                            <i class="fa-solid fa-minus"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-minus"></i>
+                        </div>
 
                     </div>
                     <!-- /.col -->
@@ -110,38 +120,49 @@
         </section>
         <!-- /.portfolio -->
 
-        <section class="about">
+        <section class="about text-center">
 
-            <div class="container">
+            <div class="container pt-5 pb-4">
 
-                <div class="row">
+                <div class="row justify-content-center">
 
                     <div class="col-12">
+
                         <h2>ABOUT</h2>
+
+                        <div class="divider p-2 fs-1">
+                            <i class="fa-solid fa-minus"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-minus"></i>
+                        </div>
+
                     </div>
                     <!-- /.col -->
 
-                    <div class="col-12 col-lg-6">
+                    <div class="col-9 col-sm-5">
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit sint obcaecati pariatur
-                            aliquid commodi a officiis reprehenderit blanditiis. Praesentium voluptas corporis
-                            voluptatibus hic aspernatur dolores dicta veniam odio magni quo!
+                            Freelance is a free bootstrap theme created by Start Bootstrap. The download includes the
+                            complete source files including HTML, CSS, and JavaScript as well as optional LESS
+                            stylesheets for easy customization.
                         </p>
                     </div>
                     <!-- /.col -->
 
-                    <div class="col-12 col-lg-6">
+                    <div class="col-9 col-sm-5">
                         <p>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis perspiciatis, ratione
-                            iusto aliquam non libero dolorum, magni eius recusandae temporibus officiis tempora quis
-                            modi reiciendis assumenda rerum voluptatem dolor. Nisi?
+                            whether yuo're a student looking to showcase your work, a professional looking to attravt
+                            clients, or a graphic artist looking to share your projects, this template is the perfect
+                            starting point!
                         </p>
                     </div>
                     <!-- /.col -->
 
                     <div class="col-12">
-                        <div>
-                            Download
+                        <div class="btn rounded">
+                            <a href="#">
+                                <i class="fa-solid fa-download"></i>
+                                Download
+                            </a>
                         </div>
                     </div>
                     <!-- /.col -->
@@ -161,6 +182,12 @@
                     <div class="col-12">
 
                         <h2>CONTACT ME</h2>
+
+                        <div class="divider pb-2 fs-1">
+                            <i class="fa-solid fa-minus"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-minus"></i>
+                        </div>
 
                         <form action=""></form>
 
