edit contact content and structure

--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
         </section>
         <!-- /.portfolio -->
 
-        <section class="about text-center">
+        <section class="about">
 
             <div class="container pt-5 pb-4">
 
                 <div class="row justify-content-center">
 
-                    <div class="col-12">
+                    <div class="col-12 text-center">
 
                         <h2>ABOUT</h2>
 
@@ -157,7 +157,7 @@
                     </div>
                     <!-- /.col -->
 
-                    <div class="col-12">
+                    <div class="col-12 text-center">
                         <div class="btn rounded">
                             <a href="#">
                                 <i class="fa-solid fa-download"></i>
@@ -175,24 +175,27 @@
 
         <section class="contact">
 
-            <div class="container">
+            <div class="container pt-5 pb-4">
 
-                <div class="row">
+                <div class="row justify-content-center">
 
-                    <div class="col-12">
+                    <div class="col-12 text-center">
 
                         <h2>CONTACT ME</h2>
 
-                        <div class="divider pb-2 fs-1">
+                        <div class="divider p-2 fs-1">
                             <i class="fa-solid fa-minus"></i>
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-minus"></i>
                         </div>
-
-                        <form action=""></form>
-
                     </div>
                     <!-- /.col-12 -->
+
+                    <div class="col-9">
+                        <form action="#" method="post"></form>
+                    </div>
+                    <!-- /.col-9 -->
+
                 </div>
                 <!-- /.row -->
             </div>
