--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/bd1c1c4b68.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="debug">
 
     <header>
-        <div class="container-lg">
-            <nav class="d-flex">
-                <div class="site_name">START BOOTSTRAP</div>
-                <div class="menu"></div>
+        <div class="container">
+            <nav class="d-flex justify-content-between align-items-center">
+                <div class="site_name py-3">START BOOTSTRAP</div>
+                <div class="menu px-2 rounded">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
             </nav>
         </div>
     </header>
@@ -205,19 +207,56 @@
     </main>
 
     <footer>
-        <section class="top">
+        <section class="top text-center">
 
-            <div class="container">
+            <div class="container p-5">
 
                 <div class="row">
 
-                    <div class="col-12 col-lg-4"></div>
+                    <div class="col-12 col-sm-4 p-3">
+                        <H6>
+                            LOCATION
+                        </H6>
+                        <DIV>
+                            2215 John Daniel Drive Clark, MO 54243
+                        </DIV>
+                    </div>
                     <!-- /.col -->
 
-                    <div class="col-12 col-lg-4"></div>
+                    <div class="col-12 col-sm-4 p-3">
+                        <H6>
+                            AROUND THE WEB
+                        </H6>
+                        <div>
+                            <span class="fa-stack fa-xl">
+                                <i class="fa-regular fa-circle fa-stack-2x"></i>
+                                <i class="fa-brands fa-facebook-f fa-stack-1x"></i>
+                            </span>
+                            <span class="fa-stack fa-xl">
+                                <i class="fa-regular fa-circle fa-stack-2x"></i>
+                                <i class="fa-brands fa-google-plus-g fa-stack-1x"></i>
+                            </span>
+                            <span class="fa-stack fa-xl">
+                                <i class="fa-regular fa-circle fa-stack-2x"></i>
+                                <i class="fa-brands fa-twitter fa-stack-1x"></i>
+                            </span>
+                            <span class="fa-stack fa-xl">
+                                <i class="fa-regular fa-circle fa-stack-2x"></i>
+                                <i class="fa-brands fa-linkedin-in fa-stack-1x"></i>
+                            </span>
+                        </div>
+                    </div>
                     <!-- /.col -->
 
-                    <div class="col-12 col-lg-4"></div>
+                    <div class="col-12 col-sm-4 p-3">
+                        <h6>
+                            ABOUT FREELANCER
+                        </h6>
+                        <div>
+                            Freelance is a free to use, open source Bootstrap theme created by <span>Start
+                                Bootstrap</span>.
+                        </div>
+                    </div>
                     <!-- /.col -->
                 </div>
                 <!-- /.row -->
@@ -227,7 +266,7 @@
         <!-- /.top -->
 
         <div class="bottom">
-            <div class="col-12">
+            <div class="col-12 text-center pt-4 pb-5">
                 Copyright &copy; Your Website 2019
             </div>
         </div>
