--- a/index.html
+++ b/index.html
@@ -8,29 +8,44 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body class="debug">
 
     <header>
-        <div class="container">
-            <nav class="d-flex justify-content-between align-items-center">
-                <div class="site_name py-3">START BOOTSTRAP</div>
-                <div class="menu px-2 rounded">
-                    <i class="fa-solid fa-bars"></i>
-                </div>
-            </nav>
-        </div>
+        <nav class="navbar navbar-expand-sm">
+            <div class="container">
+              <a class="navbar-brand text-reset fs-4 fw-semibold" href="#">START BOOTSTRAP</a>
+              <button class="navbar-toggler border-light fs-4" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                  <li class="nav-item">
+                    <a class="nav-link text-reset" href="#">PORTFOLIO</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-reset" href="#">ABOUT</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link text-reset" href="#">CONTACT</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
 
     <main>
 
         <section class="hero_page">
 
-            <div class="container">
+            <div class="container justify-content-center">
 
-                <div class="row">
+                <div class="row ">
 
                     <div class="col-12 text-center py-4">
 
@@ -58,7 +73,7 @@
 
             <div class="container py-5">
 
-                <div class="row">
+                <div class="row g-4">
 
                     <div class="col-12 text-center">
 
@@ -74,45 +89,33 @@
                     <!-- /.col -->
 
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="card my-2">
-                            <img class="img-fluid rounded" src="./assets/img/cabin.png" alt="">
-                        </div>
+                        <img class="img-fluid rounded" src="./assets/img/cabin.png" alt="">
                     </div>
                     <!-- /.col -->
 
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="card my-2">
-                            <img class="img-fluid rounded" src="./assets/img/cake.png" alt="">
-                        </div>
+                        <img class="img-fluid rounded" src="./assets/img/cake.png" alt="">
                     </div>
                     <!-- /.col -->
 
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="card my-2">
-                            <img class="img-fluid rounded" src="./assets/img/circus.png" alt="">
-                        </div>
+                        <img class="img-fluid rounded" src="./assets/img/circus.png" alt="">
                     </div>
                     <!-- /.col -->
 
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="card my-2">
-                            <img class="img-fluid rounded" src="./assets/img/game.png" alt="">
-                        </div>
+                        <img class="img-fluid rounded" src="./assets/img/game.png" alt="">
                     </div>
 
                     <!-- /.col -->
 
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="card my-2">
-                            <img class="img-fluid rounded" src="./assets/img/safe.png" alt="">
-                        </div>
+                        <img class="img-fluid rounded" src="./assets/img/safe.png" alt="">
                     </div>
                     <!-- /.col -->
 
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <div class="card my-2">
-                            <img class="img-fluid rounded" src="./assets/img/submarine.png" alt="">
-                        </div>
+                        <img class="img-fluid rounded" src="./assets/img/submarine.png" alt="">
                     </div>
                     <!-- /.col -->
                 </div>
@@ -126,7 +129,7 @@
 
             <div class="container pt-5 pb-4">
 
-                <div class="row justify-content-center">
+                <div class="row w-75 mx-auto">
 
                     <div class="col-12 text-center">
 
@@ -141,21 +144,32 @@
                     </div>
                     <!-- /.col -->
 
-                    <div class="col-9 col-sm-5">
-                        <p>
-                            Freelance is a free bootstrap theme created by Start Bootstrap. The download includes the
-                            complete source files including HTML, CSS, and JavaScript as well as optional LESS
-                            stylesheets for easy customization.
-                        </p>
-                    </div>
-                    <!-- /.col -->
+                    <div class="col-12">
 
-                    <div class="col-9 col-sm-5">
-                        <p>
-                            whether yuo're a student looking to showcase your work, a professional looking to attravt
-                            clients, or a graphic artist looking to share your projects, this template is the perfect
-                            starting point!
-                        </p>
+                        <div class="row">
+
+                            <div class="col-12 col-sm-6">
+                                <p>
+                                    Freelance is a free bootstrap theme created by Start Bootstrap. The download
+                                    includes the
+                                    complete source files including HTML, CSS, and JavaScript as well as optional LESS
+                                    stylesheets for easy customization.
+                                </p>
+                            </div>
+                            <!-- /.col -->
+
+                            <div class="col-12 col-sm-6">
+                                <p>
+                                    whether yuo're a student looking to showcase your work, a professional looking to
+                                    attravt
+                                    clients, or a graphic artist looking to share your projects, this template is the
+                                    perfect
+                                    starting point!
+                                </p>
+                            </div>
+                            <!-- /.col -->
+                        </div>
+                        <!-- /.row -->
                     </div>
                     <!-- /.col -->
 
@@ -179,7 +193,7 @@
 
             <div class="container pt-5 pb-4">
 
-                <div class="row justify-content-center">
+                <div class="row w-75 mx-auto">
 
                     <div class="col-12 text-center">
 
@@ -191,13 +205,12 @@
                             <i class="fa-solid fa-minus"></i>
                         </div>
                     </div>
-                    <!-- /.col-12 -->
+                    <!-- /.col -->
 
-                    <div class="col-9">
+                    <div class="col-12">
                         <form action="#" method="post"></form>
                     </div>
-                    <!-- /.col-9 -->
-
+                    <!-- /.col -->
                 </div>
                 <!-- /.row -->
             </div>
@@ -211,9 +224,9 @@
 
             <div class="container p-5">
 
-                <div class="row">
+                <div class="row g-4">
 
-                    <div class="col-12 col-sm-4 p-3">
+                    <div class="col-12 col-sm-4">
                         <H6>
                             LOCATION
                         </H6>
@@ -223,32 +236,36 @@
                     </div>
                     <!-- /.col -->
 
-                    <div class="col-12 col-sm-4 p-3">
+                    <div class="col-12 col-sm-4">
                         <H6>
                             AROUND THE WEB
                         </H6>
-                        <div>
-                            <span class="fa-stack fa-xl">
+                        <div class="social">
+
+                            <a href="#" class="fa-stack fa-xl">
                                 <i class="fa-regular fa-circle fa-stack-2x"></i>
                                 <i class="fa-brands fa-facebook-f fa-stack-1x"></i>
-                            </span>
-                            <span class="fa-stack fa-xl">
+                            </a>
+
+                            <a href="#" class="fa-stack fa-xl">
                                 <i class="fa-regular fa-circle fa-stack-2x"></i>
                                 <i class="fa-brands fa-google-plus-g fa-stack-1x"></i>
-                            </span>
-                            <span class="fa-stack fa-xl">
+                            </a>
+
+                            <a href="#" class="fa-stack fa-xl">
                                 <i class="fa-regular fa-circle fa-stack-2x"></i>
                                 <i class="fa-brands fa-twitter fa-stack-1x"></i>
-                            </span>
-                            <span class="fa-stack fa-xl">
+                            </a>
+
+                            <a href="#" class="fa-stack fa-xl">
                                 <i class="fa-regular fa-circle fa-stack-2x"></i>
                                 <i class="fa-brands fa-linkedin-in fa-stack-1x"></i>
-                            </span>
+                            </a>
                         </div>
                     </div>
                     <!-- /.col -->
 
-                    <div class="col-12 col-sm-4 p-3">
+                    <div class="col-12 col-sm-4">
                         <h6>
                             ABOUT FREELANCER
                         </h6>
@@ -266,12 +283,23 @@
         <!-- /.top -->
 
         <div class="bottom">
-            <div class="col-12 text-center pt-4 pb-5">
-                Copyright &copy; Your Website 2019
+
+            <div class="row">
+
+                <div class="col-12 text-center pt-4 pb-5">
+                    Copyright &copy; Your Website 2019
+                </div>
+                <!-- /.col -->
             </div>
+            <!-- /.row -->
         </div>
         <!-- /.bottom -->
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
