--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
                         <li class="nav-item">
-                            <a class="nav-link text-reset" href="#">PORTFOLIO</a>
+                            <a class="nav-link text-reset" href="#portfolio">PORTFOLIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-reset" href="#">ABOUT</a>
+                            <a class="nav-link text-reset" href="#about">ABOUT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-reset" href="#">CONTACT</a>
+                            <a class="nav-link text-reset" href="#contact">CONTACT</a>
                         </li>
                     </ul>
                 </div>
@@ -80,7 +80,7 @@
         </section>
         <!-- /.hero_page -->
 
-        <section class="portfolio">
+        <section class="portfolio" id="portfolio">
 
             <div class="container py-5">
 
@@ -136,7 +136,7 @@
         </section>
         <!-- /.portfolio -->
 
-        <section class="about">
+        <section class="about" id="about">
 
             <div class="container pt-5 pb-4">
 
@@ -200,7 +200,7 @@
         </section>
         <!-- /.about -->
 
-        <section class="contact">
+        <section class="contact" id="contact">
 
             <div class="container pt-5 pb-4">
 
