edit hover on cards and buttons

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a class="navbar-brand text-reset fs-4 fw-semibold" href="#">START BOOTSTRAP</a>
                 <!-- /.navbar brand -->
 
-                <button class="navbar-toggler border-light fs-4" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler border-light fs-4 my-2" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -32,15 +32,15 @@
                 <!-- /.navbar btn -->
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link text-reset" href="#portfolio">PORTFOLIO</a>
+                            <a class="nav-link text-reset px-2" href="#portfolio">PORTFOLIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-reset" href="#about">ABOUT</a>
+                            <a class="nav-link text-reset px-2" href="#about">ABOUT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-reset" href="#contact">CONTACT</a>
+                            <a class="nav-link text-reset px-2" href="#contact">CONTACT</a>
                         </li>
                     </ul>
                 </div>
@@ -100,33 +100,92 @@
                     <!-- /.col -->
 
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <img class="img-fluid rounded" src="./assets/img/cabin.png" alt="">
+
+                        <div class="card">
+
+                            <img class="img-fluid rounded" src="./assets/img/cabin.png" alt="">
+
+                            <div class="add">
+                                <i class="fa-solid fa-plus" aria-hidden="true"></i>
+                            </div>
+                            <!-- /.add -->
+                        </div>
+                        <!-- /.card -->
                     </div>
                     <!-- /.col -->
 
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <img class="img-fluid rounded" src="./assets/img/cake.png" alt="">
+
+                        <div class="card">
+
+                            <img class="img-fluid rounded" src="./assets/img/cake.png" alt="">
+
+                            <div class="add">
+                                <i class="fa-solid fa-plus" aria-hidden="true"></i>
+                            </div>
+                            <!-- /.add -->
+                        </div>
+                        <!-- /.card -->
                     </div>
                     <!-- /.col -->
 
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <img class="img-fluid rounded" src="./assets/img/circus.png" alt="">
+
+                        <div class="card">
+
+                            <img class="img-fluid rounded" src="./assets/img/circus.png" alt="">
+
+                            <div class="add">
+                                <i class="fa-solid fa-plus" aria-hidden="true"></i>
+                            </div>
+                            <!-- /.add -->
+                        </div>
+                        <!-- /.card -->
                     </div>
                     <!-- /.col -->
 
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <img class="img-fluid rounded" src="./assets/img/game.png" alt="">
-                    </div>
 
+                        <div class="card">
+
+                            <img class="img-fluid rounded" src="./assets/img/game.png" alt="">
+
+                            <div class="add">
+                                <i class="fa-solid fa-plus" aria-hidden="true"></i>
+                            </div>
+                            <!-- /.add -->
+                        </div>
+                        <!-- /.card -->
+                    </div>
                     <!-- /.col -->
 
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <img class="img-fluid rounded" src="./assets/img/safe.png" alt="">
+
+                        <div class="card">
+
+                            <img class="img-fluid rounded" src="./assets/img/safe.png" alt="">
+
+                            <div class="add">
+                                <i class="fa-solid fa-plus" aria-hidden="true"></i>
+                            </div>
+                            <!-- /.add -->
+                        </div>
+                        <!-- /.card -->
                     </div>
                     <!-- /.col -->
 
                     <div class="col-12 col-sm-6 col-lg-4">
-                        <img class="img-fluid rounded" src="./assets/img/submarine.png" alt="">
+
+                        <div class="card">
+
+                            <img class="img-fluid rounded" src="./assets/img/submarine.png" alt="">
+
+                            <div class="add">
+                                <i class="fa-solid fa-plus" aria-hidden="true"></i>
+                            </div>
+                            <!-- /.add -->
+                        </div>
+                        <!-- /.card -->
                     </div>
                     <!-- /.col -->
                 </div>
@@ -236,7 +295,7 @@
                             <!-- /.email -->
 
                             <div class="form-floating mb-3 border-bottom">
-                                <input type="number" class="form-control border-0" id="phone_number_input"
+                                <input type="tel" class="form-control border-0" id="phone_number_input"
                                     placeholder="Phone Number">
                                 <label for="phone_number_input">Phone Number</label>
                             </div>
