edit navbar expand

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <header>
 
-        <nav class="navbar navbar-expand-sm">
+        <nav class="navbar navbar-expand-md">
 
             <div class="container">
 
@@ -34,13 +34,13 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link text-reset px-2" href="#portfolio">PORTFOLIO</a>
+                            <a class="nav-link text-reset ps-2" href="#portfolio">PORTFOLIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-reset px-2" href="#about">ABOUT</a>
+                            <a class="nav-link text-reset ps-2" href="#about">ABOUT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-reset px-2" href="#contact">CONTACT</a>
+                            <a class="nav-link text-reset ps-2" href="#contact">CONTACT</a>
                         </li>
                     </ul>
                 </div>
