edit navbar theme to light

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a class="navbar-brand text-reset fs-4 fw-semibold" href="#">START BOOTSTRAP</a>
                 <!-- /.navbar brand -->
 
-                <button class="navbar-toggler border-light fs-4 my-2" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler border-light navbar-dark fs-4 my-2" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
